--- a/math_commands.tex
+++ b/math_commands.tex
@@ -43,6 +43,8 @@
 \def\Chapref#1{Chapter~\ref{#1}}
 % Reference to a range of chapters
 \def\rangechapref#1#2{chapters \ref{#1}--\ref{#2}}
+% Reference to a range of chapters, upper case
+\def\Rangechapref#1#2{Chapters \ref{#1}--\ref{#2}}
 % Reference to an algorithm, lower-case.
 \def\algref#1{algorithm~\ref{#1}}
 % Reference to an algorithm, upper case.
