--- a/main.tex
+++ b/main.tex
@@ -367,23 +367,21 @@ titlepage,numbers=noenddot,%1headlines,
 %\setcounter{page}{90}
 % use \cleardoublepage here to avoid problems with pdfbookmark
 \cleardoublepage
-\part{Part I}\label{pt:intro}
+\part{Preliminaries}\label{pt:intro}
 \include{ch/1-introduction}
 \include{ch/2-related-work}
 \cleardoublepage
-\ctparttext{You can put some informational part preamble text here.
-Illo principalmente su nos. Non message \emph{occidental} angloromanic
-da. Debitas effortio simplificate sia se, auxiliar summarios da que,
-se avantiate publicationes via. Pan in terra summarios, capital
-interlingua se que. Al via multo esser specimen, campo responder que
-da. Le usate medical addresses pro, europa origine sanctificate nos se.}
-\part{Part II}\label{pt:main}
+\ctparttext{
+  The main part comprises three published works.
+  They are presented here with short explanations for the context.
+}
+\part{Main}\label{pt:main}
 \include{ch/3-target-labels}
 \include{ch/4-nifr}
 \include{ch/5-zsf}
 
 \cleardoublepage
-\part{Part III}\label{pt:end}
+\part{Final}\label{pt:end}
 \include{ch/6-conclusion}
 
 % ********************************************************************
