Add section to literature review that had been lost somehow

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -20,7 +20,8 @@
   booktitle={Proceedings of the 26th International Conference on World Wide Web},
   pages={1171--1180},
   year={2017},
-  organization={International World Wide Web Conferences Steering Committee}
+  organization={International World Wide Web Conferences Steering Committee},
+  sorttitle={b}
 }
 
 @inproceedings{dwork2012fairness,
@@ -34,10 +35,11 @@
 
 @inproceedings{zafar2017fairnessconstraints,
   title={Fairness Constraints: Mechanisms for Fair Classification},
-  author={Zafar, Muhammad Bilal and Valera, Isabel and Rogriguez, Manuel Gomez and Gummadi, Krishna P},
+  author={Zafar, Muhammad Bilal and Valera, Isabel and Gomez Rodriguez, Manuel and Gummadi, Krishna P},
   booktitle={Artificial Intelligence and Statistics},
   pages={962--970},
-  year={2017}
+  year={2017},
+  sorttitle={a}
 }
 
 @inproceedings{hardt2016equality,
