--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -75,6 +75,7 @@
     \acro{EOdds}{equalized odds}
     \acro{EOpp}{equality of opportunity}
     \acro{ML}{machine learning}
+    \acro{SVM}{support vector machine}
     \acro{TNR}{true negative rate}
     \acro{TPR}{true positive rate}
   \end{acronym}
