Work on causality section

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -117,11 +117,11 @@ institution = "University of California, Irvine, School of Information and Compu
   year={2013}
 }
 
-@article{louizos2015variational,
-  title={The variational fair autoencoder},
-  author={Louizos, Christos and Swersky, Kevin and Li, Yujia and Welling, Max and Zemel, Richard},
-  journal={arXiv preprint arXiv:1511.00830},
-  year={2015}
+@article{louizos2016variational,
+  author={Christos Louizos and Kevin Swersky and Yujia Li and Max Welling and Richard S. Zemel},
+  title={The Variational Fair Autoencoder},
+  year={2016},
+  booktitle={International Conference on Learning Representations (ICLR)}
 }
 
 @inproceedings{feldman2015certifying,
@@ -406,7 +406,7 @@ year = {2017},
   year      = {2015}
 }
 
-@inproceedings{edwards2015censoring,
+@inproceedings{edwards2016censoring,
   title     = "Censoring Representations with an Adversary",
   author    = "Harrison Edwards and Amos Storkey",
   year      = "2016",
@@ -414,17 +414,25 @@ year = {2017},
   booktitle = "International Conference in Learning Representations (ICLR2016)"
 }
 
-@article{zhang2018mitigating,
-  title={Mitigating unwanted biases with adversarial learning},
-  author={Zhang, Brian Hu and Lemoine, Blake and Mitchell, Margaret},
-  journal={arXiv preprint arXiv:1801.07593},
-  year={2018}
+@inproceedings{zhang2018mitigating,
+  author = {Zhang, Brian Hu and Lemoine, Blake and Mitchell, Margaret},
+  title = {Mitigating Unwanted Biases with Adversarial Learning},
+  year = {2018},
+  isbn = {9781450360128},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  doi = {10.1145/3278721.3278779},
+  booktitle = {Proceedings of the 2018 AAAI/ACM Conference on AI, Ethics, and Society},
+  pages = {335–340},
+  numpages = {6},
+  location = {New Orleans, LA, USA},
+  series = {AIES '18}
 }
 
-@article{beutel2017data,
+@inproceedings{beutel2017data,
   title={Data decisions and theoretical implications when adversarially learning fair representations},
   author={Beutel, Alex and Chen, Jilin and Zhao, Zhe and Chi, Ed H},
-  journal={arXiv preprint arXiv:1707.00075},
+  booktitle = {Workshop on Fairness, Accountability, and Transparency in Machine Learning (FAT/ML)},
   year={2017}
 }
 
@@ -462,6 +470,16 @@ year = {2017},
   author={Everitt, Tom and Krakovna, Victoria and Orseau, Laurent and Hutter, Marcus and Legg, Shane},
   journal={arXiv preprint arXiv:1705.08417},
   year={2017}
+}
+
+@article{ganin2016domain,
+  author  = {Yaroslav Ganin and Evgeniya Ustinova and Hana Ajakan and Pascal Germain and Hugo Larochelle and Fran{\c{c}}ois Laviolette and Mario March and Victor Lempitsky},
+  title   = {Domain-Adversarial Training of Neural Networks},
+  journal = {Journal of Machine Learning Research},
+  year    = {2016},
+  volume  = {17},
+  number  = {59},
+  pages   = {1-35}
 }
 
 @inproceedings{liu2015faceattributes,
