--- a/ch/2-related-work.tex
+++ b/ch/2-related-work.tex
@@ -43,7 +43,7 @@ that the training set is biased but the deployment setting is not.
 By \emph{deployment setting} I am here referring to the real distribution
 that will be encountered by the machine learning system once it is used.
 
-This can be seen as a form of transfer learning and notably does not exhibit a fairness-accuracy trade-off.
+% This can be seen as a form of transfer learning and notably does not exhibit a fairness-accuracy trade-off.
 
 An instance of this setting has been formalized in \citet{blum2020recovering}.
 In their formalization, the training set starts out unbiased,
@@ -511,7 +511,7 @@ Furthermore, theoretical bounds were proved for the expected bias of a classifie
 However, the work does not take into account individual fairness in any way.
 
 While the algorithms by \citet{feldman2015certifying} are manually constructed and explicit,
-\citet{louizos2015variational} use an approach
+\citet{louizos2016variational} use an approach
 that falls more in the area of end-to-end learning where fewer hand-crafted algorithms are used.
 The method is based on deep variational autoencoders (VAE).
 There is an encoder and a decoder that are both modeled as deep neural networks.
@@ -743,119 +743,359 @@ the proposed approach achieves higher accuracy but also higher discrimination th
 One limiting factor that the authors identify is the size of the dataset:
 the degree of discrimination cannot be accurately estimated by the algorithm if the dataset is small.
 
-\citet{woodworth2017learning} also consider Equalized Odds as a fairness
-definition but give strong criticism of the post-processing approach of Hardt et al.~They
-present examples where finding the optimal (but discriminatory) predictor in a particular
-hypothesis class and then correcting it post hoc performs poorly. The proofs are based on
-the PAC learning framework. Certain training distributions allow the training of good fair
-classifiers from scratch but when doing post-processing on a Bayes-optimal predictor for
-this distribution, the result can be a very bad predictor that gives essentially random
-predictions. The authors explicitly construct one such distribution: it corresponds to the
-case where the sensitive attribute \(s\) is more predictive of the class label \(y\) than the
-features \(x\). This is arguably an unusual case.
+\citet{woodworth2017learning} also consider Equalized Odds as a fairness definition
+but give strong criticism for the post-processing approach from \citet{hardt2016equality}.
+They present examples where finding the optimal (but discriminatory) predictor in a particular hypothesis class
+and then correcting it post hoc performs poorly.
+The proofs are based on the PAC learning framework.
+Certain training distributions allow the training of good fair classifiers from scratch
+but when doing post-processing on a Bayes-optimal predictor for this distribution,
+the result can be a very bad predictor that gives essentially random predictions.
+The authors explicitly construct one such distribution:
+it corresponds to the case where the sensitive attribute \(s\) is more predictive of the class label \(y\)
+than the features \(x\), which is arguably an unusual case.
 
-The proposed method is then as follows. First, a classifier is trained that minimizes a
-loss function with Equalized Odds as a constraint. The constraint specifies that the
-absolute differences in true positive rate and false positive rate between the two groups
-are below a certain threshold \(\alpha\). In a second step, post-processing similar to Hardt
-et al.~is performed with a holdout training set. This ensures that the predictor does not
-have the same weaknesses as the proposal by Hardt et al.~in the given example situations.
+The proposed method is then as follows.
+First, a classifier is trained that minimizes a loss function with Equalized Odds as a constraint.
+The constraint specifies that the absolute differences in true positive rate and false positive rate
+between the two groups are below a certain threshold \(\alpha\).
+In a second step, post-processing similar to \citet{hardt2016equality} is performed with a holdout training set.
+This ensures that the predictor does not have the same weaknesses
+as the proposal from \citet{hardt2016equality} in the given example situations.
 However, this more thorough approach is computationally unfeasible.
-For a feasible approximation,
-\citet{woodworth2017learning} refer to the idea by \citet{zafar2017fairnesstreatment}
-of using the covariance as a proxy for statistical
-dependency. They refer to this criterion as \emph{Equalized Correlations}. Based on this, they
-investigate linear predictors and find that for these, post-processing can achieve
-Equalized Correlations as well as training a fair predictor from scratch. Therefore, their
-criticism is only valid for non-linear predictors or linear predictors that try to enforce
-the actual Equalized Odds. There are no experiments in the paper.
+For a feasible approximation, \citet{woodworth2017learning} refer to the idea from \citet{zafar2017fairnesstreatment}
+of using the covariance as a proxy for statistical dependency.
+They refer to this criterion as \emph{Equalized Correlations}.
+Based on this, they investigate linear predictors and find that for these,
+post-processing can achieve Equalized Correlations as well as training a fair predictor from scratch.
+Therefore, their criticism is valid only for non-linear predictors
+or linear predictors that try to enforce the actual Equalized Odds.
+There are no experiments in the paper.
 
 Another approach that aims to define a better proxy for the fairness criteria is \citet{quadrianto2017recycling}.
 In that paper, \emph{distribution matching} is used to evaluate fairness.
-More specifically, like \citet{louizos2015variational}, Maximum Mean Discrepancy (MMD) is used to check if the
-distributions \(P(\hat{y}|s=0)\) and \(P(\hat{y}|s=1)\) are close, to ensure Demographic
-Parity. This can also be done for Equality of Opportunity and Equalized Odds with the
-appropriate distributions.
+More specifically, like \citet{louizos2016variational}, Maximum Mean Discrepancy (MMD) is used to check
+if the distributions \(P(\hat{y}|s=0)\) and \(P(\hat{y}|s=1)\) are close, to ensure Demographic Parity.
+This can also be done for Equality of Opportunity and Equalized Odds with the appropriate distributions.
 \citet{quadrianto2017recycling} show that the approach by \citet{zafar2017fairnessconstraints} is a special case of this.
-Furthermore, in contrast to Zafar et al.'s approach the
-sensitive attribute is explicitly made available to the classifier during training, but
-not during decision time (after training is finished). This is done via \emph{privileged
-learning}. Privileged learning is a variant of SVMs where certain features are only
-available during training but not during decision time. This is usually used in the
-context where some features are costly or impractical to gather. An example is using (only
-during training) thermal images in addition to normal images for face recognition. The
-additional information is intended to enable the classifier to learn the desired task
-quicker or better.
+Furthermore, in contrast to that approach,
+the sensitive attribute is explicitly made available to the classifier during training,
+but not during decision time (after training is finished).
+This is done via \emph{privileged learning}.
+Privileged learning is a variant of \acp{SVM}
+where certain features are only available during training but not during decision time.
+This is usually used in the context where some features are costly or impractical to gather.
+An example is using (only during training) thermal images in addition to normal images for face recognition.
+The additional information is intended to enable the classifier to learn the desired task quicker or better.
 
-Combining privileged learning and the MMD fairness criterion, the task becomes a
-multi-objective optimization for an SVM. The MMD criterion is generally non-convex but
-there are several ways to deal with this. Quadrianto and Sharmanska find the best
-algorithm (low discrimination, high accuracy) with an evolutionary multi-objective
-optimization. The evolutionary algorithm produces a number of variants of the classifier
-with different trade-offs between classification error and discrimination. As Zafar et al.
-before, the Adult/Census Income dataset is used to test Demographic Parity and the
-ProPublica/COMPAS dataset is used for Equality of Opportunity and Equalized Odds. Zafar et
-al.'s work was used as a baseline but the implementation failed on the Adult/Census Income
-dataset. On the ProPublica/COMPAS dataset, the proposed algorithm performed within error
-just as well as Zafar et al.'s algorithm.
+Combining privileged learning and the MMD fairness criterion,
+the task becomes a multi-objective optimization for an SVM.
+The MMD criterion is generally non-convex but there are several ways to deal with this.
+The authors find the best algorithm (low discrimination, high accuracy)
+with an evolutionary multi-objective optimization.
+The evolutionary algorithm produces a number of variants of the classifier
+with different trade-offs between classification error and discrimination.
+As in \citet{zafar2017fairnesstreatment} before,
+the Adult/Census Income dataset is used to test Demographic Parity
+and the ProPublica/COMPAS dataset is used for Equality of Opportunity and Equalized Odds.
+\citet{zafar2017fairnesstreatment} was used as a baseline
+but the implementation failed on the Adult/Census Income dataset.
+On the ProPublica/COMPAS dataset,
+the proposed algorithm performed within error just as well as the fair baseline algorithm.
 
-With the recent emergence of adversarial neural networks, interest was renewed in creating
-fair representations. \citet{madras2018learning} present one such recent
-approach.
-Madras et al.  convert the statistical criteria Demographic Parity, Equality of Opportunity and Equalized
-Odds to adversarial objective functions. The general idea is that the ``adversary'' tries
-to gain discriminatory information from the fair representation. More specifically, there
-are 4 neural networks: the encoder \(f(x, s)\) that encodes the unfair representation \(x\)
-into a fair representation \(z\), the classifier \(g(z)\) that tries to predict \(y\) from \(z\),
-the decoder \(k(z, s)\) that tries to decode \(z\) back into \(x\) while knowing about the
-sensitive attribute \(s\) and finally the adversary \(h(z)\) that tries to predict \(s\) from
-\(z\). The classifier ensures that \(z\) contains enough information to predict \(y\). The
-decoder ensures that the fair representation contains enough information from \(x\) and can
-be used by other classifiers as well.
+With the emergence of adversarial neural networks, interest was renewed in creating fair representations.
+\citet{ganin2016domain} can be seen as a direct precursor:
+they propose adversarial learning for domain adaptation.
+Their method involves learning a shared representation that is invariant to the different domains.
+If we consider demographic groups as different domains, then this is essentially fair representation learning.
 
-The key contribution by Madras et al.~is the objective functions for the adversary. In the
-case of Demographic Parity, we take -- for each sensitive group separately -- the average
-absolute difference between what the adversary predicted \(h(z)\) and the true sensitive
-attribute \(s\). After computing these two separate averages, the averages are added and get
-a negative sign to form the objective function. For Equalized Odds, the average absolute
-difference is calculated on each sensitive group-label combination \((s, y)\) for \(s \in \{0, 1\}\) and \(y \in \{0, 1\}\) separately. Computing these separate averages is referred
-to as \emph{group normalizing} in the paper. The authors present a proof for some upper bounds
-on unfairness by the optimal adversary when these objective functions are used. An
-alternative objective function could be based on cross-entropy, but Madras et al.~dismiss
-this on the grounds that there are situations in which it leads to wrong results. However,
-in the experiments they show that the proposed objective and one objective based on
-cross-entropy lead to very similar results.
+This is the premise of \citet{edwards2016censoring}.
+Four neural networks are trained in an adversarial setting:
+the encoder \(f(x)\) which encodes the unfair representation \(x\) into a fair representation \(z\),
+the classifier \(g(z)\) which tries to predict \(y\) from \(z\),
+the decoder \(k(z)\) which tries to reconstruct \(x\) from \(z\),
+and finally the adversary \(h(z)\) which tries to predict \(s\) from \(z\).
+The classifier \(g\) ensures that \(z\) contains enough information to predict \(y\).
+The decoder \(k\) ensures that the fair representation contains enough information from \(x\)
+and can be used by other classifiers as well.
+The sign of the adversary's loss is inverted for the gradient of the encoder \(f\),
+so that encoder tries to make the adversary's predictions worse.
+Encoder and adversary should converge to a point
+where the adversary can only predict the correct \(s\) from \(z\) at chance level.
+Assuming that the adversary is powerful enough to detect any trace of \(s\) in \(z\),
+this means that no information about the sensitive attribute \(s\) remains in the fair representation \(z\).
+Note that there is a tension here between requiring \(x\) to be reconstructible from \(z\)
+and requiring \(z\) to contain no information about \(s\), since \(x\) \emph{does} contain information about \(s\).
 
-Based on the weights of the different parts of the loss function (adversarial loss,
-classification loss, decoder loss, etc.), different trade-offs can be achieved. There are
-experiments on the Adult/Census Income dataset and the Heritage Health dataset, but they
-are not compared to other works.
+\citet{beutel2017data} explicitly connect the method presented in \citet{edwards2016censoring}
+to various fairness definitions.
 
-\section{Recent developments in Fairness}\label{recent-developments-in-fairness}
-At this point, fairness in machine learning has come a long way.
-There are several working implementations for various fairness criteria
-that give reasonable performance.
-Nevertheless, there are still many unexplored areas.
+\citet{zhang2018mitigating} propose an architecture similar to \citet{edwards2016censoring},
+but with the difference that no decoder (and no reconstruction loss) is used
+and that the adversary tries to predict \(s\) from the final output of the classifier
+instead of an intermediate representation.
+The goal is not to learn a fair representation, but a fair classifier.
 
-There is, for example, a lot of other recent work on fair representation
-with adversarial neural networks.
-These approaches vary in the structure of the network and the objective function.
-These works are, however, all right now only in pre-print.
-There is \citet{edwards2015censoring}, \citet{beutel2017data}
-and \citet{zhang2018mitigating} for learning fair representations with adversaries.
-\citet{calmon2017optimized} improve on the work by \citet{zemel2013learning}.
+\citet{madras2018learning} is another, similar approach.
+One difference to \citet{edwards2016censoring} is that several fairness criteria are considered:
+Demographic Parity, Equality of Opportunity and Equalized Odds are all converted to adversarial objective functions.
+Another difference is that the decoder \(k\) has access to \(s\) for the decoding: \(k: (Z, S)\to X\).
+This ensures that there is no tension between reconstructing \(x\) and removing \(s\) from \(z\).
+However, the key contribution is the objective functions for the adversary.
+In the case of Demographic Parity, we take -- for each sensitive group separately --
+the average absolute difference between what the adversary predicted \(h(z)\) and the true sensitive attribute \(s\).
+After computing these two separate averages,
+the averages are added and get a negative sign to form the objective function.
+For Equalized Odds,
+the average absolute difference is calculated on each sensitive group-label combination
+\((s, y)\) for \(s \in \{0, 1\}\) and \(y \in \{0, 1\}\) separately.
+Computing these separate averages is referred to as \emph{group normalizing} in the paper.
+The authors present a proof for upper bounds on unfairness by the optimal adversary
+when these objective functions are used.
+An alternative objective function could be based on cross-entropy -- as used in \citet{edwards2016censoring} --
+but the authors dismiss this on the grounds that there are situations in which it leads to wrong results.
+However, in the experiments they show
+that the proposed objective and one objective based on cross-entropy lead to very similar results.
 
-\citet{kilbertus2018blind} recently proposed a mechanism
-where the sensitive attributes are encrypted to avoid being used for discrimination.
-\citet{bechavod2017penalizing} use (as some others before) a regularization approach to train fair classifiers.
+Based on the weights of the different parts of the loss function
+(adversarial loss, classification loss, decoder loss, etc.),
+different trade-offs can be achieved.
 
-Finally, \citet{everitt2017reinforcement} investigate
-a problem in reinforcement learning that is similar to bias in classification.
-In the previously discussed papers,
-the bias originates from the training inputs or the training labels.
-In the work by \citet{everitt2017reinforcement},
-they consider the case of reinforcement learning (RL) with a corrupt reward signal.
-In this case, the RL algorithm might know that the reward is not correct,
-but does not know in what specific way it is not correct.
-The paper discusses some strategies to deal with this,
-but there are very many open questions.
+\section{Fairness via causal reasoning}%
+\label{sec:fairness-definition-based-on-causal-reasoning}
+In this section, I will briefly discuss a view that also falls under the definition-centric view:
+in it, the goal is to make decisions that conform to causality-based notions of fairness.
+Methods in this category assume that the causal structure of the task is known,
+which can then be used to identify unfair path ways for making decisions.
+One motivating example is this \citep{dedeo2014wrong}:
+In college admissions, we might not want to discriminate against prospective students from poorer backgrounds.
+If the goal is to admit those students that have a chance of graduating,
+then we could employ a machine learning algorithm to predict graduation rate.
+One attribute that might turn out to be predictive of graduation is physical fitness.
+If this attribute's causal influence is through,
+for example, signaling a character trait such as grit,
+then this is an admissible attribute.
+However, if on the other hand physical fitness is caused by access to expensive gyms,
+then it is a signal for high socioeconomic status which we do not want to use as a criterion.
+So, depending on what the causal mechanism is,
+physical fitness could be a discriminatory or a non-discriminatory feature.
+
+% =====================================
+%          copied in - start
+% =====================================
+
+In this spirit, \citet{kilbertus2017avoiding} use causal graphs to develop new fairness criteria.
+In their work, the prediction output \(\hat{y}\) is a part of the causal graph that models the data.
+\citet{hardt2016equality} had already defined
+Demographic Parity and Equalized Odds (with Equality of Opportunity as a special case)
+as statistical independencies;
+Demographic Parity: \(s \bot \hat{y}\), Equalized Odds: \(s \bot \hat{y} | y\).
+In causal graphs, the first is equivalent to no existing path between \(s\) and \(\hat{y}\),
+and the second independence allows paths to exist between \(s\) and \(\hat{y}\)
+as long as all paths are all blocked by \(y\).
+Instead of considering paths that start from \(s\) directly,
+the authors argue that the observed proxies for \(s\) are more important.
+A proxy for \(s\) is a clearly defined observable quantity
+that is significantly correlated with \(s\).
+According to the authors,
+the sensitive attribute in its pure conceptual form may influence the prediction directly,
+but any observable proxy of it may not.
+The reason for this seems to be that if all influence of \(s\) on \(\hat{y}\) was removed,
+only very few features would remain to make a decision
+because usually nearly all features are influenced by \(s\) somehow.
+
+The concept of removing causal influence
+can be efficiently expressed with \emph{interventions} on the causal graph
+(level 2 according to Pearl).
+An intervention on a variable \(v\) cuts off all parents of \(v\)
+and sets \(v\) to a specific value, say \(v'\).
+This is written as \(do(v=v')\).
+So, for a given proxy \(p\) (\(p \in \{0, 1\}\)),
+predictions \(\hat{y}\) exhibit no \emph{proxy discrimination} if
+\begin{align}
+  \label{eq:proxy-discrimination}
+  P(\hat{y}|do(p=0)) = P(\hat{y}|do(p=1))~.
+\end{align}
+If this is fulfilled, there is no influence from \(s\) that is mediated through \(p\).
+There might still be direct influence of \(s\) on \(\hat{y}\).
+The fact that \(do\)-interventions are used in the definition means
+that a causal model is required to evaluate this criterion; observational data does not suffice.
+
+The causal model that is used in the paper is a structural equation model.
+Each edge in the graphical model corresponds to an equation.
+There is a node for each input feature, each sensitive attribute (usually only one),
+each proxy and the output of the classifier.
+Additionally, there is an unobserved error variable for each input feature (and each proxy).
+The equation that defines the classification result in terms of the inputs is parameterized.
+This equation represents the classifier \(\hat{y} = g_{\theta}(x,p,s)\).
+In the paper, only linear functions are used in this equation;
+meaning that the classifier is linear.
+
+The following is then the procedure to construct a fair classifier:
+
+\begin{enumerate}
+  \item
+    Do an intervention with \(do(p=p')\). Change the structural equations accordingly.
+  \item
+    Construct one big equation for the classifier output \(g_{\theta}(x,p',s) = ...\)
+    by substituting all variables according to the graph up to the root nodes,
+    taking into account the \(do\)-intervention.
+  \item
+    Find the set of values of \(\theta\) that fulfills the fairness criterion:
+    \(g_{\theta}(x,p'=0,s) = g_{\theta}(x,p'=1,s)\).
+    If there is no such value for \(\theta\), the procedure does not work.
+  \item
+    Within the allowed range of values for \(\theta\),
+    find the one that minimizes the classification loss.
+\end{enumerate}
+
+The simplest way to achieve step 3 is usually to choose a \(\theta\)
+which makes all contributions from descendants of \(p\) vanish,
+but the procedure also allows for more sophisticated ways to remove the influence of \(p\).
+(Descendants of \(p\) are all variables that can be reached from \(p\) via directed paths.)
+
+% \includegraphics{\{\{ site.url \}\}/blog/assets/fairness-literature/all-connected.svg}
+% \includegraphics{\{\{ site.url \}\}/blog/assets/fairness-literature/p-separated.svg}
+
+The resulting classifier is fair by construction.
+However, note that this procedure does not lead to true individual fairness,
+because the influence of \(p\) is only removed at the population level
+(except in the case where all descendants of \(p\) are completely removed).
+Individual decisions can still be unfair as long as it balances out overall.
+
+The authors provide a number of properties of their method with corresponding proofs.
+For example, if the influence of \(p\) on \(x\) is additive and linear,
+any predictor of the form \[g(x - \mathbb{E}[x|do(p=p')])\] has no proxy discrimination.
+There are no experiments presented in the paper.
+
+The main weakness of the presented approach are
+the need for a causal model that can not be inferred from just the training data
+and the difficulty of finding a permissible range of values for \(\theta\).
+If the simple way is taken for choosing the range (removing all descendants of \(p\)),
+then there might not be enough input features left for learning.
+Another weakness is that no true individual fairness is achieved.
+
+True individual causal fairness is, however, the goal of \citet{kusner2017counterfactual}.
+In their paper, a new fairness criterion which they call ``counterfactual fairness''
+is defined making use of causal reasoning.
+For the definition, they assume that we have a causal model
+that can be used to compute counterfactuals (corresponding to level 3 in Pearl's hierarchy).
+This is in contrast to \citet{kilbertus2017avoiding} who relied on interventions (level 2).
+The causal model depends on unobserved background variables \(U\),
+non-sensitive features \(x\) and a sensitive attribute \(s\).
+A predictor \(\hat{y}\) is then \emph{counterfactually fair}
+if the following equality of counterfactual probabilities holds:
+\begin{align}
+  \label{eq:counterfactual-fairness}
+  P(\hat{y}_{s=i}(U) = 1|x, s=i)=P(\hat{y}_{s=j}(U) = 1|x, s=i)
+\end{align}
+where \(i, j \in \{0, 1\}\) and \(i \neq j\).
+
+The first counterfactual probability is actually not a real counterfactual:
+it is just the probability of observing \(\hat{y} = 1\)
+given the background variables \(U\), the features \(x\) and \(s=i\).
+The second counterfactual probability is the probability of observing \(\hat{y} = 1\)
+given \(U\) and \(x\) and given that we had \(s=j\) instead of the actual value \(s=i\).
+In other words, the criterion demands this:
+the prediction would have been the same in the counterfactual world
+where sensitive attribute is \(j\) instead of \(i\).
+In the counterfactual world, everything that is not causally dependent on \(s\) is held constant.
+
+The difficult problem that Pearl solved with his theory of counterfactuals
+is how to define the counterfactual world where the value of \(s\) is \(j\) instead of \(i\).
+One approach that philosophers took in trying to define it
+is looking for the ``closest world'' to ours where \(s=j\), according to some measure of distance.
+Pearl's counterfactuals do not work this way, but it is a useful intuition.
+Making sure predictions are the same, for the closest world with \(s=j\),
+is arguably what \citet{dwork2012fairness} (see above) did
+with their idea of treating similar people similarly (regardless of \(s\)).
+In this way, counterfactual fairness is similar to the individual fairness
+that \citet{dwork2012fairness} defined.
+However, instead of using a similarity metric,
+a causal model is needed for counterfactual fairness.
+The two criteria share some strengths and weaknesses.
+A strength is that they are both fair on the individual level,
+which is not the case for Demographic Parity and Equality of Opportunity.
+In Demographic Parity and Equality of Opportunity,
+we can achieve fairness by doing ``negative'' discrimination on some individuals
+and ``positive'' discrimination on others, as long as those two effects cancel out.
+This is because those criteria are statistical criteria.
+However, in turn this implies that individual fairness and counterfactual fairness
+could not be used to implement affirmative action (``positive'' discrimination for a group)
+and they rely on the features \(x\) being correct.
+
+The authors prove that \(\hat{y}\) is counterfactually fair
+if it does not causally depend (as defined by the causal model) on \(s\) or any descendants of \(s\).
+This motivates the following algorithm to train a fair predictor.
+We assume that we have the causal model and the prior over the background variables \(U\).
+We train an classifier \(g_{\theta}(U, x_{\not\succ s})\) that is parameterized by \(\theta\).
+\(x_{\not\succ s}\) refers to all features \(x\) that are \emph{not} descendants of \(s\).
+Furthermore, we have a loss function that measures how well the class labels \(y\) are predicted.
+For training, we optimize the expected loss over \(P(U|x_i, s_i)\)
+which is the distribution over the background variables, as defined by the causal model,
+given training instances \(x_i\) and \(s_i\).
+Note that the number of features that are non-descendants of \(s\) might be very small or even zero.
+However, this is not a problem as the classifier \(g_{\theta}(U, x_{\not\succ s})\)
+can get the necessary information from \(U\).
+The variables in \(U\) are, by definition, non-descendants of \(s\).
+Predictions are made via \[\hat{y} = \mathbb{E} [g_{\theta}(U^*, x_{\not\succ s}^*)|x^*, s^*]\].
+
+Constructing the causal model remains the major weakness of this approach.
+The authors point to existing literature on the topic and give some additional vague guidelines.
+In the experiment section, the algorithm is applied to the Law School Success dataset.
+The task is to predict the first year average grade (FYA) in law school
+given the GPA before law school and the score on the entrance exam (LSAT).
+Also known are race and sex, which are not supposed to be used to make predictions.
+Logistic regression is used for the classifier.
+
+The authors construct two causal models.
+In both models, race and sex influence all three test scores GPA, LSAT and FYA.
+In the first model, there is only one background variable that the authors call \emph{knowledge}.
+This variable influences the three test scores but does not influence the race or sex.
+The second model is a fully deterministic model
+where we have three background variables which play the role of additive error terms.
+The three error terms may be correlated.
+If the underlying causal model is taken as true,
+the trained fair classifiers are automatically completely counterfactually fair.
+The second model achieves a slightly lower prediction error than the first model
+(RMSE of 0.918 vs 0.929).
+Additionally, two (unfair) baseline models were trained:
+one trained on only \(x\) and the other trained on \(x\) and \(s\).
+Those baseline models indeed turn out to be not counterfactually fair.
+
+The major advantages of the approach are:
+It enforces true individual fairness and it leaves open the choice of classifier.
+This alone makes it one of the best approaches to date.
+
+% =====================================
+%          copied in - end
+% =====================================
+
+% \section{Recent developments in Fairness}\label{recent-developments-in-fairness}
+% At this point, fairness in machine learning has come a long way.
+% There are several working implementations for various fairness criteria
+% that give reasonable performance.
+% Nevertheless, there are still many unexplored areas.
+
+% There is, for example, a lot of other recent work on fair representation
+% with adversarial neural networks.
+% These approaches vary in the structure of the network and the objective function.
+% These works are, however, all right now only in pre-print.
+% There is \citet{edwards2016censoring}, \citet{beutel2017data}
+% and \citet{zhang2018mitigating} for learning fair representations with adversaries.
+% \citet{calmon2017optimized} improve on the work by \citet{zemel2013learning}.
+
+% \citet{kilbertus2018blind} recently proposed a mechanism
+% where the sensitive attributes are encrypted to avoid being used for discrimination.
+% \citet{bechavod2017penalizing} use (as some others before) a regularization approach to train fair classifiers.
+
+% Finally, \citet{everitt2017reinforcement} investigate
+% a problem in reinforcement learning that is similar to bias in classification.
+% In the previously discussed papers,
+% the bias originates from the training inputs or the training labels.
+% In the work by \citet{everitt2017reinforcement},
+% they consider the case of reinforcement learning (RL) with a corrupt reward signal.
+% In this case, the RL algorithm might know that the reward is not correct,
+% but does not know in what specific way it is not correct.
+% The paper discusses some strategies to deal with this,
+% but there are very many open questions.
