Finish causality section

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -151,7 +151,7 @@ institution = "University of California, Irvine, School of Information and Compu
 }
 
 @inproceedings{kamishima2011fairness,
-  title={Fairness-aware learning through regularization approach},
+  title={Fair{\-}ness-aware learning through regularization approach},
   author={Kamishima, Toshihiro and Akaho, Shotaro and Sakuma, Jun},
   booktitle={Data Mining Workshops (ICDMW), 2011 IEEE 11th International Conference on},
   pages={643--650},
@@ -169,7 +169,7 @@ institution = "University of California, Irvine, School of Information and Compu
 }
 
 @inproceedings{pedreshi2008discrimination,
-  title={Discrimination-aware data mining},
+  title={Dis{\-}crimination-aware data mining},
   author={Pedreshi, Dino and Ruggieri, Salvatore and Turini, Franco},
   booktitle={Proceedings of the 14th ACM SIGKDD international conference on Knowledge discovery and data mining},
   pages={560--568},
@@ -302,6 +302,45 @@ year = {2016}
   year={2017}
 }
 
+@inproceedings{chiappa2019path,
+  title={Path-specific counterfactual fairness},
+  author={Chiappa, Silvia},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={33},
+  pages={7801--7808},
+  year={2019}
+}
+
+@inproceedings{wu2019pc,
+  title={Pc-fairness: A unified framework for measuring causality-based fairness},
+  author={Wu, Yongkai and Zhang, Lu and Wu, Xintao and Tong, Hanghang},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={3404--3414},
+  year={2019}
+}
+
+@inproceedings{kilbertus2020sensitivity,
+  title={The sensitivity of counterfactual fairness to unmeasured confounding},
+  author={Kilbertus, Niki and Ball, Philip J and Kusner, Matt J and Weller, Adrian and Silva, Ricardo},
+  booktitle={Uncertainty in Artificial Intelligence},
+  pages={616--626},
+  year={2020},
+  organization={PMLR}
+}
+
+@InProceedings{creager2020causal,
+  title = 	 {Causal Modeling for Fairness In Dynamical Systems},
+  author =       {Creager, Elliot and Madras, David and Pitassi, Toniann and Zemel, Richard},
+  booktitle = 	 {Proceedings of the 37th International Conference on Machine Learning},
+  pages = 	 {2185--2195},
+  year = 	 {2020},
+  editor = 	 {Hal Daumé III and Aarti Singh},
+  volume = 	 {119},
+  address = 	 {Virtual},
+  month = 	 {7},
+  publisher =    {PMLR},
+}
+
 @inproceedings{williams1996gaussian,
   title={Gaussian processes for regression},
   author={Williams, Christopher KI and Rasmussen, Carl Edward},
@@ -383,7 +422,7 @@ year = {2016}
 
 @inproceedings{kilbertus2017avoiding,
 title = {Avoiding Discrimination through Causal Reasoning},
-author = {Kilbertus, Niki and Rojas Carulla, Mateo and Parascandolo, Giambattista and Hardt, Moritz and Janzing, Dominik and Sch\"{o}lkopf, Bernhard},
+author = {Kilbertus, Niki and Rojas Carulla, Mateo and Parascandolo, Giambattista and Hardt, Mo{\-}ritz and Janzing, Dominik and Sch\"{o}lkopf, Bernhard},
 booktitle = {Advances in Neural Information Processing Systems (NIPS)},
 pages = {656--666},
 year = {2017},
@@ -522,4 +561,28 @@ booktitle={Submitted to International Conference on Learning Representations},
 year={2021},
 url={https://openreview.net/forum?id=7IElVSrNm54},
 note={under review}
+}
+
+@inproceedings{wick2019unlocking,
+  title={Unlocking fairness: a trade-off revisited},
+  author={Wick, Michael and Panda, Swetasudha and Tristan, Jean-Baptiste},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={8783--8792},
+  volume={32},
+  year={2019}
+}
+
+@article{friedler2016possibility,
+  title={On the (im) possibility of fairness},
+  author={Friedler, Sorelle A and Scheidegger, Carlos and Venkatasubramanian, Suresh},
+  journal={arXiv preprint arXiv:1609.07236},
+  year={2016}
+}
+
+@inproceedings{kim2019learning,
+  title={Learning not to learn: Training deep neural networks with biased data},
+  author={Kim, Byungju and Kim, Hyunwoo and Kim, Kyungsu and Kim, Sungjin and Kim, Junmo},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={9012--9020},
+  year={2019}
 }
