Continue literature review

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -586,3 +586,17 @@ note={under review}
   pages={9012--9020},
   year={2019}
 }
+
+@article{arjovsky2019invariant,
+  title={Invariant risk minimization},
+  author={Arjovsky, Martin and Bottou, L{\'e}on and Gulrajani, Ishaan and Lopez-Paz, David},
+  journal={arXiv preprint arXiv: 1907.02893},
+  year={2019}
+}
+
+@inproceedings{creager2020environment,
+  title={Environment Inference for Invariant Learning},
+  author={Creager, Elliot and Jacobsen, J{\"o}rn-Henrik and Zemel, Richard},
+  booktitle={ICML Workshop on Uncertainty and Robustness},
+  year={2020}
+}
