--- a/ch/2-related-work.tex
+++ b/ch/2-related-work.tex
@@ -1069,7 +1069,9 @@ The main difference to previous work is an additional entropy loss term in the a
 
 \citet{arjovsky2019invariant} tackle a similar problem, but take a very different approach,
 which they term ``Invariant Risk Minimization'', in contrast to the default method Empirical Risk Minimization.
-They formalize the problem as one of different environments $e\in E$.
+Just like \citet{kim2019learning}'s approach,
+They formalize the problem as one of different environments $e\in E$,
+where the goal is to learn a classifier
 
 \citet{creager2020environment} compares itself directly to \citet{arjovsky2019invariant}.
 
